tests/baselines/reference/objectLiteralParameterResolution.errors.txt
==== tests/cases/compiler/objectLiteralParameterResolution.ts (6 errors) ====
    interface Foo{
        extend<T>(target: T, ...objs: any[]): T;
        extend<T>(deep: boolean, target: T, ...objs: any[]): T;
    }
    declare var $: Foo;
    var s = $.extend({
        type: "GET" ,
        data: "data" ,
        success: wrapSuccessCallback(requestContext, callback) ,
                 ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'wrapSuccessCallback'.
                                     ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'requestContext'.
                                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'callback'.
        error: wrapErrorCallback(requestContext, errorCallback) ,
               ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'wrapErrorCallback'.
                                 ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'requestContext'.
                                                 ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'errorCallback'.
        dataType: "json" ,
        converters: { "text json": "" },
        traditional: true ,
        timeout: 12,
        }, "");
    